Change required Java version from 11 to 8